Thu Apr 10 17:50:33 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SSL/SSL_Context.cpp:
          Removed not needed semi colon

Thu Apr 10 11:54:12 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_02_Test.cpp:
        * tests/Compiler_Features_04_Test.cpp:
        * tests/Compiler_Features_05_Test.cpp:
        * tests/Compiler_Features_06_Test.cpp:
        * tests/Compiler_Features_07_Test.cpp:
        * tests/Compiler_Features_11_Test.cpp:
        * tests/Compiler_Features_12_Test.cpp:
          Layout changes

        * tests/run_test.lst:
        * tests/tests.mpc:
        * tests/Compiler_Features_30_Test.cpp:
          Removed this test, an empty initializer list for
          an array of unknown size is illegal according to the
          C++ spec

Thu Apr 10 07:50:23 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/TestTarget.pm:
          Fix file mapping problem on OpenVMS.

Wed Apr  9 13:11:09 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_mingw32.GNU:
          Set ACE_PLATFORM_CONFIG to config-win32.h so that we can
          use that in other places of the make system

Wed Apr  9 08:22:45 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/Process_VMS.pm:
          Added missing IgnoreHostRoot() method.

Wed Apr  9 07:30:51 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
          Copy new executable if changed through Executable() method.
          Some code cleanup.

Tue Apr  8 19:27:23 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/SOCK_Connector.cpp:
          Fix to allow the extended connection semantics on windows to be
          overridden by adding #define ACE_NON_BLOCKING_BUG_DELAY 0 to
          config.h prior to including config-win32.h. The default behavior
          is unchanged but in cases where a tight connection timeout is